	fixed a regression that could cause crashes in the C#/ADO driver
		when binding null or date values
	added all parameters to ODBC config screen
	removed calls to mysql_stmt_store_result/mysql_stmt_num_rows from
		mysql connection to improve performance.  mysql connection
		doesn't know the total number of rows prior to full fetch
		now (which is consistent with most other databases).

0.67.0 - general documenation clean-up
	added missing all: target to man/Makefile
	mysql_info in drop-in library for mysql returns NULL instead of "" now
	mysql_errno in the drop-in library now returns the error number from the
		DB, instead of CR_UNKNOWN_ERROR, if no error map is provided,
		and the backend database is known to be mysql
	mysql_refresh in the drop-in library works with options other than
		REFRESH_GRANT now
	mysql_shutdown/kill in the drop-in library return 1 on failure now
		rather than 2000
	date/time and timestamp types are recognized as binary types now
	year/timestamp types are recognized as unsigned types now
	TINY/MEDIUM/LONG_TEXT types are recognized as blobs now
	mapping date/time to MYSQL_TYPE_DATE/TIME, rather than
		MYSQL_TYPE_DATETIME is the default in the drop-in library now
		and SQLR_MAP_DATETIME_TO_DATE has been removed
	mysql drop-in library sets column flags correctly now
	mysql drop-in library runs appropriate kill/shutdown queries now
	mysql connection uses non-stmt api for "show *" queries now
	mysql drop-in library runs "show processlist" for mysql_list_processes
	mysql drop-in library supports date/time/datetime input binds now
		instead of just treating them all as datetimes
	connection modules differentiate between date/time/datetime binds now
		instead of just treating them all as datetimes
	added result set row translation module framework
	updated firebird connection module to  the fieldstruct.textbuffer
		instead of fieldbuffer for non-text to text translations
	added support for negative times in mysql connection module and